# OnlyBible

./: .firebaserc  .gitignore  Cargo.toml  README.md  analysis_options.yaml  astro.config.mjs  build.gradle.kts  bun.lockb  devenv.nix  firebase.json  go.mod  gradle.properties  main.go  main.js  makefile  package-lock.json  package.json  pnpm-lock.yaml  pubspec.yaml  readme.md  settings.gradle.kts
android/: key.properties
app/: build.gradle.kts
assets/: about-us.md  alpine.js  index.html  logo.vectornator  privacy-policy.md
bible_app/: README.md  analysis_options.yaml  pubspec.yaml
composeApp/: build.gradle.kts  composeApp.podspec
design/: feature_graphic.curve  icon.curve  logo.curve  test.curve  test2.curve
fastlane/: Appfile
gradle/: libs.versions.toml
integration_test/: home_screen_test.dart
ios/: .gitignore  Podfile  export_options.plist  firebase_app_id_file.json
lib/: actions.dart  actions.freezed.dart  app.dart  atom.dart  dialog.dart  env.dart  firebase_options.dart  main.dart  models.dart  models.freezed.dart  navigation.dart  options.dart  state.dart  theme.dart  utils.dart
linux/: CMakeLists.txt  my_application.cc
macos/: firebase_app_id_file.json
public/: index2.html  styles.css
scripts/: convertVerses.js  dump_csv_files.sh  generate.dart  generate_audio.dart  generate_book_names.dart  main.js  main2.js  outputMap.json  package-lock.json  package.json  scrape.dart  search.js
src/: main.rs
src-tauri/: tauri.conf.json
web/: index.html  manifest.json
website/: package-lock.json  package.json  svelte.config.js  uno.config.ts  (+2 more)
(+338 files in other folders)
